# curve

./: CMakeLists.txt  README.md
Source/: HostStartup.cpp
Source/Plugins/: InternalPlugins.cpp
Source/UI/: AudioResilienceManager.h  GraphEditorPanel.cpp  GraphEditorPanel.h  MainHostWindow.cpp  MainHostWindow.h  PluginWindow.h  TrayIconController.h
